[gd_scene load_steps=2 format=3 uid="uid://dynv7txqeabpv"]

[ext_resource type="Script" uid="uid://l1iu2bwiewbh" path="res://skills/skill_test.gd" id="1_h2tly"]

[node name="SkillTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h2tly")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 12

[node name="LeftPanel" type="PanelContainer" parent="HSplitContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/LeftPanel"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/LeftPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "スキルテスト"

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PresetSection" type="VBoxContainer" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="PresetLabel" type="Label" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer/PresetSection"]
layout_mode = 2
text = "プリセット"

[node name="PresetOption" type="OptionButton" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer/PresetSection"]
unique_name_in_owner = true
layout_mode = 2

[node name="LoadPresetButton" type="Button" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer/PresetSection"]
unique_name_in_owner = true
layout_mode = 2
text = "プリセット読込"

[node name="HSeparator2" type="HSeparator" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SkillSection" type="VBoxContainer" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="SkillLabel" type="Label" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer/SkillSection"]
layout_mode = 2
text = "スキル発動"

[node name="SkillIdInput" type="LineEdit" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer/SkillSection"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "スキルID (例: c1s1)"

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer/SkillSection"]
layout_mode = 2

[node name="PlayerLabel" type="Label" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer/SkillSection/HBoxContainer"]
layout_mode = 2
text = "発動者:"

[node name="PlayerOption" type="OptionButton" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer/SkillSection/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ActivateSkillButton" type="Button" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer/SkillSection"]
unique_name_in_owner = true
layout_mode = 2
text = "スキル発動"

[node name="HSeparator3" type="HSeparator" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ExecutionSection" type="VBoxContainer" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ExecLabel" type="Label" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer/ExecutionSection"]
layout_mode = 2
text = "実行制御"

[node name="StepButton" type="Button" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer/ExecutionSection"]
unique_name_in_owner = true
layout_mode = 2
text = "1ステップ実行"

[node name="ResolveAllButton" type="Button" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer/ExecutionSection"]
unique_name_in_owner = true
layout_mode = 2
text = "全て実行"

[node name="HSeparator4" type="HSeparator" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ChoiceSection" type="VBoxContainer" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ChoiceLabel" type="Label" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer/ChoiceSection"]
layout_mode = 2
text = "選択入力"

[node name="ChoiceStatusLabel" type="Label" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer/ChoiceSection"]
unique_name_in_owner = true
layout_mode = 2
text = "選択待ちなし"

[node name="ChoiceOption" type="OptionButton" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer/ChoiceSection"]
unique_name_in_owner = true
layout_mode = 2

[node name="SubmitChoiceButton" type="Button" parent="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer/ChoiceSection"]
unique_name_in_owner = true
layout_mode = 2
text = "選択確定"

[node name="HSplitContainer" type="HSplitContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="StatePanel" type="PanelContainer" parent="HSplitContainer/HSplitContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/HSplitContainer/StatePanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/HSplitContainer/StatePanel/MarginContainer"]
layout_mode = 2

[node name="StateTitle" type="Label" parent="HSplitContainer/HSplitContainer/StatePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "盤面状態"

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/HSplitContainer/StatePanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/HSplitContainer/StatePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StateLabel" type="RichTextLabel" parent="HSplitContainer/HSplitContainer/StatePanel/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "盤面未初期化"
fit_content = true

[node name="LogPanel" type="PanelContainer" parent="HSplitContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/HSplitContainer/LogPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/HSplitContainer/LogPanel/MarginContainer"]
layout_mode = 2

[node name="LogTitle" type="Label" parent="HSplitContainer/HSplitContainer/LogPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "ログ"

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/HSplitContainer/LogPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LogText" type="TextEdit" parent="HSplitContainer/HSplitContainer/LogPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "ログがここに表示されます..."
editable = false

[connection signal="pressed" from="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer/PresetSection/LoadPresetButton" to="." method="_on_load_preset_button_pressed"]
[connection signal="pressed" from="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer/SkillSection/ActivateSkillButton" to="." method="_on_activate_skill_button_pressed"]
[connection signal="pressed" from="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer/ExecutionSection/StepButton" to="." method="_on_step_button_pressed"]
[connection signal="pressed" from="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer/ExecutionSection/ResolveAllButton" to="." method="_on_resolve_all_button_pressed"]
[connection signal="pressed" from="HSplitContainer/LeftPanel/ScrollContainer/MarginContainer/VBoxContainer/ChoiceSection/SubmitChoiceButton" to="." method="_on_submit_choice_button_pressed"]
